caption,text align

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <script src="javascript.js">
     </script>
   </head>	
-  <body>
-    <div class="header-container">
-      <input type="text" name="header" id="header" placeholder="Enter Header" onchange="AddHeader();">
-      <input type="number" name="x-axis" id="hx-axis" placeholder="enter header x-axis">
-    </div>
-    <div>
-      <!-- <input type="text" name="caption" id="caption" placeholder="Enter body text" onchange="Addcaption();">
-      <input type="number" name="x-axis" id="bx-axis" placeholder="enter caption x-axis"> -->
-    </div>
+  <body> 
+    <div class="body-head-flex header-container">
+        <div class="header-container">
+          <input class="text-align" type="text" name="header" id="header" placeholder="Header" onchange="AddHeader();">
+          <input type="number" name="x-axis" id="hx-axis" placeholder="header x-axis max-800">
+        </div>
+        <div>
+          <input class="text-align" type="text" name="caption" id="caption" placeholder="Enter body text" onchange="Addcaption();">
+          <input type="number" name="x-axis" id="bx-axis" placeholder="caption x-axis max-800">
+        </div>
+      </div>
       <div class="canvas-wraper">
-        <div id="header-copied"></div> 
-        <canvas id="canvas-image" class="canvas-container"> </canvas>
-        <div id="footer-copied"></div>
+        <canvas id="canvas-image" class="canvas-container overflow"> </canvas>
           <div class="flex-container">
           <div><input type="file" name="File" id="file-input"></div>
           <div>
@@ -27,10 +27,10 @@
           </div>
         </div>
       </div>
-     <footer class="footer-container">
+     <footer class="footer-container ">
       <div class="Footer">
-        <input type="text" name="footer" id="footer" placeholder="Enter Footer"onchange="AddFooter();">
-        <input type="number" name="fx-axis" id="fx-axis" placeholder="enter footer x axis" class="placeholder-margin">
+        <input class="" type="text" name="footer" id="footer" placeholder="Enter Footer"onchange="AddFooter();">
+        <input type="number" name="fx-axis" id="fx-axis" placeholder="footer x-axis max-800" class="placeholder-margin">
       </div>  
      </footer>
   </body>
